--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
-    <string name="app_name">BackLight_Game</string>
+    <string name="app_name">Skip Square</string>
+    <string name="topScore">Tpo Score</string>
+    <string name="reset">Reset</string>
+    <string name="quit">Quit</string>
 </resources>
